# ALUGrid_Bempp

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  README  config.h.cmake  configure.ac  dune-alugrid.pc.in  dune.module
cmake/modules/: ALUGridType.cmake  AddZOLTANFlags.cmake  CMakeLists.txt  DuneAlugridMacros.cmake  FindDLMalloc.cmake  FindZOLTAN.cmake
dune/: CMakeLists.txt  Makefile.am
dune/alugrid/: CMakeLists.txt  Makefile.am  dgf.hh  grid.hh
dune/alugrid/2d/: CMakeLists.txt  Makefile.am  alu2dinclude.hh  alugrid.hh  bndprojection.hh  datahandle.hh  entity.hh  entity_imp.cc  entityseed.hh  geometry.hh  geometry_imp.cc  grid.hh  grid_imp.cc  gridfactory.cc  gridfactory.hh  indexsets.hh  intersection.cc  intersection.hh  intersection_imp.cc  iterator.hh  iterator_imp.cc
dune/alugrid/3d/: CMakeLists.txt  Makefile.am  alu3dinclude.hh  alu3diterators.hh  alugrid.hh  communication.hh  datacollectorcaps.hh  datahandle.hh  entity.hh  entity_imp.cc  entity_inline.hh  entityseed.hh  faceutility.cc  faceutility.hh  faceutility_imp.cc  geometry.hh  geometry_imp.cc  grid.hh  grid_imp.cc  grid_inline.hh  gridfactory.cc  gridfactory.hh  gridview.hh  indexsets.hh  iterator.cc  iterator.hh  iterator_imp.cc  mappings.cc  mappings.hh  mappings_imp.cc  topology.cc  topology.hh
dune/alugrid/common/: CMakeLists.txt  Makefile.am  alugrid_assert.hh  backuprestore.hh  bndprojection.hh  capabilities.hh  declaration.hh  defaultindexsets.hh  fromtogridfactory.hh  geostorage.hh  hsfc.hh  interfaces.hh  intersectioniteratorwrapper.hh  ldbhandleif.hh  macrogridview.hh  memory.hh  objectfactory.hh  persistentcontainer.hh  structuredgridfactory.hh  transformation.hh  twists.hh  writeparalleldgf.hh
dune/alugrid/impl/: .gitignore  CMakeLists.txt  Makefile.am  binaryio.cc  binaryio.hh  byteorder.hh  indexstack.h  macrofileheader.cc  macrofileheader.hh  projectvertex.h
dune/alugrid/impl/2d/: CMakeLists.txt  Makefile.am  Makefile.am.include  grid.cc  grid.h  grid_imp.cc  handle.cc  handle.h  hdlrw.h  listwalk.h  mknbrs.cc  triang.cc  triang.h  vmmap.cc  vmmap.h  vtx_btree.cc  vtx_btree.h  vtxprojection.h
dune/alugrid/impl/duneinterface/: CMakeLists.txt  Makefile.am  gitter_dune_impl.cc  gitter_dune_impl.h  gitter_dune_pll_impl.cc  gitter_dune_pll_impl.h
dune/alugrid/impl/parallel/: CMakeLists.txt  Makefile.am  alumetis.hh  alusfc.hh  aluzoltan.hh  gitter_hexa_top_pll.cc  gitter_hexa_top_pll.h  gitter_pll_idn.cc  gitter_pll_impl.cc  gitter_pll_impl.h  gitter_pll_ldb.cc  gitter_pll_ldb.h  gitter_pll_mgb.cc  gitter_pll_mgb.h  gitter_pll_sti.cc  gitter_pll_sti.h  gitter_tetra_top_pll.cc  gitter_tetra_top_pll.h  mpAccess.cc  mpAccess.h  mpAccess_MPI.h  mpAccess_MPI_inline.h
dune/alugrid/impl/serial/: CMakeLists.txt  Makefile.am  gatherscatter.hh  ghost_elements.cc  ghost_elements.h  ghost_info.cc  ghost_info.h  gitter_geo.cc  gitter_hexa_top.cc  gitter_hexa_top.h  gitter_impl.cc  gitter_impl.h  gitter_mgb.cc  gitter_mgb.h  gitter_sti.cc  gitter_sti.h  gitter_tetra_top.cc  gitter_tetra_top.h  iterator_sti.h  key.h  lock.h  mapp_cube_3d.cc  mapp_cube_3d.h  mapp_tetra_3d.cc  mapp_tetra_3d.h  mapp_tetra_3d_ext.h  myalloc.cc  myalloc.h  parallel.h  refcount.hh  refinementrules.h  serialize.h  walk.h
dune/alugrid/impl/test/: .gitignore  CMakeLists.txt  Makefile.am  adapt.cc  alugrid.cfg  backuprestore.cc  sizes.cc  threadsafety.cc
dune/alugrid/impl/test/grids/: cube.hexa  cube.tetra  cube_12.tetra  cube_48.tetra  cube_512.hexa  cube_hc_16.hexa  cube_hc_3072.tetra  cube_hc_64.hexa  cube_hs_512.hexa  macro.big  reference.tetra  unstructured_218.tetra
dune/alugrid/test/: .gitignore  CMakeLists.txt  Makefile.am  checktwists.hh  test-alugrid.cc  test-fromtogridfactory.cc  test-threadsafety.cc  test-twists.cc
dune/alugrid/test/dgf/: CMakeLists.txt  Makefile.am
lib/: CMakeLists.txt  Makefile.am  dunealugridam2cmake.lib
m4/: CMakeLists.txt  Makefile.am  alugridtype.m4  dlmalloc.m4  dune-alugrid.m4  sionlib.m4  zlib.m4  zoltan.m4
misc/: Makefile.am  alugrid.cfg  checkversion.sh
misc/examples/: .gitignore  2.tetra  Makefile.am  adapt.cc  backuprestore.cc  cube.tetra  example.cc  examplepara.cc  howmuch.cc  loadlb.cc  memdata_new.hexa  memdata_new.tetra  memdata_old.hexa  memdata_old.tetra  memdata_oldpara.hexa  memdata_oldpara.tetra  periodic.cc  sizes.cc  timer.hh  twist.cc
misc/examples/macrogrids/: Makefile.am  arbitrary.hexa  unstructured.tetra
misc/macrogrids/: .gitignore  cube_12.tetra  cube_48.tetra  cube_hc_3072.tetra  cube_hc_512.hexa  macro.big  reference.tetra
misc/versioncheck/: .gitignore  Makefile.am  alugridversion.cc
scripts/: version.sh
utils/: CMakeLists.txt  Makefile.am
utils/convert-macrogrid/: .gitignore  CMakeLists.txt  Makefile.am  main.cc  partition.hh  test.dgf  timing.txt
