alucommondir = $(includedir)/dune/alugrid/common
alucommon_HEADERS = alugrid_assert.hh \
                    backuprestore.hh \
										bndprojection.hh \
										capabilities.hh \
										declaration.hh \
										defaultindexsets.hh \
                    fromtogridfactory.hh \
										geostorage.hh \
                    hsfc.hh \
										intersectioniteratorwrapper.hh \
										interfaces.hh \
										ldbhandleif.hh \
                    macrogridview.hh \
										memory.hh \
										objectfactory.hh \
										persistentcontainer.hh \
										structuredgridfactory.hh \
										transformation.hh \
										twists.hh \
										writeparalleldgf.hh

include $(top_srcdir)/am/global-rules
